# vue-rust

./: .gitignore  BaseChart.vue  README.md  docker-compose.yaml  requests.http
.github/workflows/: ci.yml
back/: Cargo.toml  Dockerfile  img-base64.txt
back/src/: main.rs  server.rs  types.rs  utils.rs
back/src/controllers/: image_controller.rs  mod.rs
back/src/services/: image.rs
front/: package-lock.json  package.json
front/src/: App.vue  utils.ts
front/src/assets/: main.css
front/src/components/: Chart.vue  Greetings.vue  InputZone.vue  LevelsChart.vue
front/src/components/__tests__/: Greetings.spec.ts  utils.spec.ts
front/src/services/: imageService.ts
front/src/stores/: colorLevels.ts  image.ts
scripts/: unit_test_back.sh  unit_test_front.sh
