[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] } # added
http = "0.2.9"
image = "0.24.7"
base64 = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
axum-macros = "0.3.8"
tracing-subscriber = "0.3.17"
fancy-regex = "0.11.0"